# maze_solver_bot

./: CMakeLists.txt  README.md  package.xml
config/: JustBot.rviz  R2_Navigation.rviz  diff_drive_controller.yaml  ekf.yaml  gz_bridge.yaml  joystick.yaml  mapper_params_online_async.yaml  nav2_params.yaml
description/: gazebo_robot_ref.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_base.xacro  ros2_control.xacro
launch/: bringup.launch.py  joystick.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  rsp.launch.py
src/: frontier_explorer.py  path_detector.py  slip_detection.py
worlds/: Maze.IGS  Maze.SLDPRT  Maze.STL  Maze.blend  Maze.blend1  Maze.mtl  Maze.world
